[4810]apps/budgeting/controlbar: fix horizontal spacing of filter dropdowns

--- a/meinberlin/assets/scss/components/_control-bar.scss
+++ b/meinberlin/assets/scss/components/_control-bar.scss
@@ -12,7 +12,7 @@
         & > button,
         & > div.btn-group,
         & > form {
-            margin-bottom: $spacer;
+            @extend .u-spacer-bottom-half;
         }
     }
 
